DXP-2377 Migrate to java 21